2001-03-20  Michael Meeks  <michael@ximian.com>

	* xml.pl.in (xst_xml_print_line): print @_ not $_[0] -
	fixes bug in memory conf.

2001-03-19  Michael Meeks  <michael@ximian.com>

	* Makefile.am: Clean.

2001-03-19  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in (xst_buffer_load): return a ref to an empty
	  array if file not found. This lets the buffer be
	  filled with stuff as soon as the function returns.
	* network.pl.in: some function renaming, a minor
	  prefix usage bug and the interface configuration editting
	  functions and table for Debian 2.2. semi-tested.
	* parse.pl.in: minor code simplification.
	* replace.pl.in: all the debian interfaces file replacers.

2001-03-17  Hans Petter Jansson  <hpj@ximian.com>

	* Added gettext.pl.in by Kenneth Christiansen.

2001-03-16  Arturo Espinosa  <arturo@ximian.com>

	* Network parsing works fully for Debian. Tested on Poiss.
	* network.pl.in (xst_network_active_interfaces_get): fixed
	  network discovery command.
	  (xst_network_interfaces_get_existing): get existing ifaces
	  for Debian.
	  (xst_network_debian_get_file): counterpart of a useless
	  function. :)
	  (xst_network_get_chap_passwd): deleted. Useless.
	  (xst_network_get_ppp_options_re): general function to get
	  options from pppd option files.
	  (xst_network_get_ppp_options_unsup): get unknown options.
	  (xst_network_debian_parse_remote_address): cool hack that
	  allows plip existance under Debian.
	  Some parse and replace table beautifying.
	* parse.pl.in (xst_parse_replace_hash_values): more flexible
	  replacing. New syntax is %has_value%, anywhere on the param.
	  Check the interface parse table for Debian for an example.
	  (xst_parse_trivial): Just return the arguments.
	  Modified return value for all line parsers: the old method
	  regarded a line containing "-1" as EOF. Now returning
	  a refference to the string, or -1 if EOF.
	  (xst_parse_split_ref): returns -1 if key not found.